Bug 497562 - Getting error on opening the app: Error transferring https://mstdn.social/api/v1/notifications/unread_count
Summary: Getting error on opening the app: Error transferring https://mstdn.social/api...
Status: RESOLVED FIXED
Alias: None
Product: Tokodon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.12.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-12-16 14:39 UTC by przem.formela
Modified: 2025-01-07 23:59 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.12.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description przem.formela 2024-12-16 14:39:40 UTC
SUMMARY
Each time Tokodon opens up I get an error header saying "Could not communicate with server: Error transferring https://mstdn.social/api/v1/notifications/unread_count - server replied: . Check your settings."

STEPS TO REPRODUCE
1. Open Tokodon

OBSERVED RESULT
The error message pops up

EXPECTED RESULT
There's no error message

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.2.4
KDE Frameworks Version: 6.9.0
Qt Version: 6.8.1
Kernel Version: 6.12.4-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 31.3 GiB of RAM
Graphics Processor: AMD Radeon RX 6700 XT
Manufacturer: ASUS

ADDITIONAL INFORMATION
The notifications page works nonetheless.
Comment 1 Ilya Bizyaev 2024-12-19 22:10:40 UTC
Same here — notably, with the same homeserver.
Comment 2 Bug Janitor Service 2025-01-07 23:51:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/tokodon/-/merge_requests/664
Comment 3 Joshua Goins 2025-01-07 23:59:38 UTC
Git commit 297d2c3a3d0c0e2db8ddbe5c5e65e485e747c7de by Joshua Goins.
Committed on 07/01/2025 at 23:50.
Pushed by redstrate into branch 'release/24.12'.

Don't display a visual error when failing to fetch unread count

Some servers don't support this endpoint, and it's not integral to
Tokodon's operation.

M  +16   -8    src/account/account.cpp

https://invent.kde.org/network/tokodon/-/commit/297d2c3a3d0c0e2db8ddbe5c5e65e485e747c7de