Don't display a visual error when failing to fetch unread count

Some servers don't support this endpoint, and it's not integral to
Tokodon's operation.

BUG: 497562